--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
+    
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
@@ -149,8 +151,9 @@
         </div>
       </div>
       <hr>
-      <div class="row pt-3  pb-5 justify-content-evenly " style="background-color: gray;"><h1 class="headd">Contact Us </h1>
-        <div class="col-md-5">
+      <div class="row pt-3  pb-5 justify-content-evenly " style="background-color: gray;">       
+        <div class="col-md-5 text-center">
+          <h1 class="headd">Contact Us </h1>
           <form>
 
             <div class="mb-3">             
@@ -178,11 +181,102 @@
             <button type="submit" class="btn btn-danger">Submit</button>
           </form>
         </div>
-        <div class="col-md-5">
-
+        <div class="col-md-5 ">
+          <h4 class="hed2 text-center">Address</h4>
+          <h4 id="hh3">W Smithfield, <br> London EC1A 7BE, <br> United Kingdom</h4>
+          <i class="fa-solid fa-square-phone">:987-654-321-00</i><br>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2482.787753036402!2d-0.1018354240900446!3d51.517109809994835!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47d8a00baf21de75%3A0x52963a5addd52a99!2sLondon%2C%20UK!5e0!3m2!1sen!2sin!4v1694434926266!5m2!1sen!2sin" width="300" height="300px" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="container-fluid mt-4"></iframe>
         </div>
       </div>
     </div> 
-  </section> 
+  </section><hr>
+  <section>
+    <h2 class="headd text-center mt-3">FAQ</h2>
+    <div class="row mt-5 mb-3 container-fluid justify-content-evenly" > 
+      <div class="col-md-10">
+    <div class="accordion " id="accordionExample">
+      <div class="accordion-item bg-dark text-white">
+        <h2 class="accordion-header">
+          <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+            Accordion Item #1
+          </button>
+        </h2>
+        <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
+          <div class="accordion-body">
+            <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+          </div>
+        </div>
+      </div>
+      <div class="accordion-item bg-dark text-white">
+        <h2 class="accordion-header">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+            Accordion Item #2
+          </button>
+        </h2>
+        <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+          <div class="accordion-body">
+            <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+          </div>
+        </div>
+      </div>
+      <div class="accordion-item bg-dark text-white">
+        <h2 class="accordion-header">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+            Accordion Item #3
+          </button>
+        </h2>
+        <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+          <div class="accordion-body">
+            <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  </div>
+  </section>  
+
+
+  <!-- footer -->
+  <section  >
+    <div class="row container-fluid mt-5 justify-content-evenly pt-3 pb-3 text-white" style="background-color: black; height: fit-content; width: 100%;" >
+      <div class="col-md-3 mb-5 pt-4 ">
+        <div class="">
+      <h1 class=" pb-4  pt-2">  BootStrap</h1>
+      <h4 >Now is the winter  <br>
+        Made glorious summer by this <br>
+        And all the clouds that lour'd  <br>
+        In the deep bosom of the </h4>
+      </div>
+      </div> 
+      <div class="col-md-3 mb-5">
+        <div class="cal2 pt-0 ">
+        <h2 class="pb-4"> <br>Important Links</h2> 
+        <h4>
+        <a href="#">Home</a>
+        <a href="#">Contact us</a>
+        <a href="#">Support</a>
+        <a href="#">Donate Now</a></h4>
+      </div>
+      </div>
+      <div class="col-md-3 mb-5"> 
+        <div class=" pt-4 ">
+        <h2 class="pb-3 pt-2">Location</h2>
+        <h5 class="pt-2">W Smithfield, <br> London EC1A 7BE, <br> United Kingdom  </h5> 
+       <i class="fa-solid fa-square-phone ">:987-654-321-00</i><br>  
+      </div>
+      </div>
+      <hr class="mt-5">
+
+      <!-- COPYright -->
+
+      <div class="row text-white text-center">
+        <div class="col-md-12">
+         <h5> copyright 1999-2001 by FahadNizami. All Rights Reserved</h5>
+        </div>
+      </div>
+    </div>
+    </div>
+  </section>
   </body>
 </html>
